--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,5 +1,5 @@
-COMPOSE_PROJECT_NAME=uasnt
+COMPOSE_PROJECT_NAME=iactargetdev
 
-DOMAIN_NAME=uas.nt
-CONSUL_DOMAIN_NAME=uas.nt.consul
-PUBLIC_DOMAIN_NAME=uas.nt.public
+DOMAIN_NAME=iac.target.dev
+CONSUL_DOMAIN_NAME=iac.target.dev.consul
+PUBLIC_DOMAIN_NAME=iac.target.dev.public
